--- a/stroom-query-api/build.gradle
+++ b/stroom-query-api/build.gradle
@@ -17,12 +17,15 @@
 ext.moduleName = 'stroom.query.api'
 
 dependencies {
-    compile project(':stroom-docref')
-    compile libs.jackson_annotations
-    compile libs.swagger_annotations
-    compile libs.jaxb_api
+    implementation project(':stroom-docref')
+    implementation libs.jackson_annotations
+    implementation libs.swagger_annotations
+    implementation libs.jaxb_api
 
-    testCompile libs.assertj
-    testCompile libs.junit_jupiter_api
+    implementation libs.javax_activation
+    permitUnusedDeclared libs.javax_activation
+
+    testImplementation libs.assertj
+    testImplementation libs.junit_jupiter_api
 }
 
