--- a/build.gradle
+++ b/build.gradle
@@ -190,7 +190,8 @@ subprojects {
     }
 
     javadoc {
-        options.addBooleanOption('html5', true)
+        // this switch is needed in java10
+        //options.addBooleanOption('html5', true)
     }
 
     task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -397,7 +398,9 @@ task aggregatedJavadocs(
 	options.author true
 	options.links 'http://docs.oracle.com/javase/8/docs/api/'
 	options.addStringOption 'Xdoclint:none', '-quiet'
-        options.addBooleanOption('html5', true)
+
+        // this switch is needed in java10
+        //options.addBooleanOption('html5', true)
 	
 	subprojects.each { proj ->
 		proj.tasks.withType(Javadoc).each { javadocTask ->
