--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ ext.versions = [
         javax_ws          : '2.0.1',
         javax_servlet     : '3.1.0',
         jersey            : '2.25.1',
+        jetty             : '9.4.10.v20180503', //in line with dropwizard 1.3.3
         jooq              : '3.9.3',
         jose4j            : '0.5.2',
         junit             : '5.2.0',
@@ -103,6 +104,7 @@ ext.libs = [
         jaxb_api            : "javax.xml.bind:jaxb-api:2.3.0",
         jersey_client       : "org.glassfish.jersey.core:jersey-client:$versions.jersey",
         jersey_server       : "org.glassfish.jersey.core:jersey-server:$versions.jersey",
+        jetty_http          : "org.eclipse.jetty:jetty-http:$versions.jetty",
         junit_jupiter_api   : "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
         junit4              : "junit:junit:4.12",
         jose4j              : "org.bitbucket.b_c:jose4j:$versions.jose4j",
