--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ ext.libs = [
         stroomExpression    : "stroom:stroom-expression:$versions.stroomExpression",
 
         //------------3rd-party------------
-        assertj             : 'org.assertj:assertj-core:3.10.0',
+        assertj_core        : 'org.assertj:assertj-core:3.10.0',
         dropwizard_core     : "io.dropwizard:dropwizard-core:$versions.dropwizard",
         dropwizard_hibernate: "io.dropwizard:dropwizard-hibernate:$versions.dropwizard",
         dropwizard_db       : "io.dropwizard:dropwizard-db:$versions.dropwizard",
@@ -106,7 +106,6 @@ ext.libs = [
         jersey_server       : "org.glassfish.jersey.core:jersey-server:$versions.jersey",
         jetty_http          : "org.eclipse.jetty:jetty-http:$versions.jetty",
         junit_jupiter_api   : "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
-        junit4              : "junit:junit:4.12",
         jose4j              : "org.bitbucket.b_c:jose4j:$versions.jose4j",
         jooq                : "org.jooq:jooq:$versions.jooq",
         logback_classic     : "ch.qos.logback:logback-classic:$versions.logback",
@@ -192,7 +191,7 @@ subprojects {
 
     afterEvaluate {
         //repositories {
-            //jcenter()
+        //jcenter()
         //}
 
 //        compileJava {
@@ -289,7 +288,7 @@ configure(projectsToBePublished) {
             inputs.property("moduleName", moduleName)
             manifest {
                 attributes(
-                    "Automatic-Module-Name": moduleName,
+                        "Automatic-Module-Name": moduleName,
                 )
             }
         }
@@ -352,27 +351,27 @@ configure(projectsToBePublished) {
 }
 
 task aggregatedJavadocs(
-    type: Javadoc, 
-    description: 'Generate javadocs from all child projects as if it was a single project', 
-    group: 'Documentation') {
+        type: Javadoc,
+        description: 'Generate javadocs from all child projects as if it was a single project',
+        group: 'Documentation') {
 
-	destinationDir = file("$buildDir/docs/javadoc")
-	title = "$project.name $version API"
-	options.author true
-	options.links 'http://docs.oracle.com/javase/8/docs/api/'
-	options.addStringOption 'Xdoclint:none', '-quiet'
+    destinationDir = file("$buildDir/docs/javadoc")
+    title = "$project.name $version API"
+    options.author true
+    options.links 'http://docs.oracle.com/javase/8/docs/api/'
+    options.addStringOption 'Xdoclint:none', '-quiet'
 
-        // this switch is needed in java10
-        //options.addBooleanOption('html5', true)
-	
-	projectsToBePublished.each { proj ->
-		proj.tasks.withType(Javadoc).each { javadocTask ->
-			source += javadocTask.source
-			classpath += javadocTask.classpath
-			excludes += javadocTask.excludes
-			includes += javadocTask.includes
-		}
-	}
+    // this switch is needed in java10
+    //options.addBooleanOption('html5', true)
+
+    projectsToBePublished.each { proj ->
+        proj.tasks.withType(Javadoc).each { javadocTask ->
+            source += javadocTask.source
+            classpath += javadocTask.classpath
+            excludes += javadocTask.excludes
+            includes += javadocTask.includes
+        }
+    }
 }
 
 project(':stroom-query-common').tasks.build.dependsOn aggregatedJavadocs
