--- a/stroom-query-audit/build.gradle
+++ b/stroom-query-audit/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile libs.kafka
     compile libs.slf4j_api
 
+    testCompile libs.assertj_core
     testCompile libs.junit_jupiter_api
     testCompile libs.mockito_core
 }
