--- a/stroom-query-common/build.gradle
+++ b/stroom-query-common/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile libs.jaxb_api
 
     //--------testing----------
-    testCompile libs.assertj
+    testCompile libs.assertj_core
     testCompile libs.junit_jupiter_api
     testCompile libs.mockito_core
 }
