--- a/stroom-query-hibernate/build.gradle
+++ b/stroom-query-hibernate/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile libs.javax_inject
     compile libs.slf4j_api
 
+    testCompile libs.assertj_core
     testCompile libs.junit_jupiter_api
 }
