--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,7 @@ buildscript {
 plugins {
     // plugin for producing a tree of task dependencies, run task 'taskTree', e.g.
     // ./gradlew bintrayUpload taskTree --no-repeat
-    id "com.dorongold.task-tree" version "1.3" apply true
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.10.2'
+    id "com.dorongold.task-tree" version "1.3.1" apply true
 }
 
 apply plugin: 'ca.cutterslade.analyze'
@@ -43,7 +39,7 @@ ext.versions = [
         stroomQuery       : getPropertyOrDefault('version', 'SNAPSHOT'),
 
         //------Stroom-libs---------------
-        stroomExpression  : 'v2.0.4',
+        stroomExpression  : 'v2.0.6',
         eventLogging      : 'v4.0.5_schema-v3.2.4',
 
         //------------3rd-party------------
@@ -61,7 +57,7 @@ ext.versions = [
         jetty             : '9.4.10.v20180503', //in line with dropwizard 1.3.3
         jooq              : '3.9.3',
         jose4j            : '0.5.2',
-        junit             : '5.2.0',
+        junit             : '5.3.2',
         logback           : '1.2.3', // in line with dropwizard 1.3.3
         kafka             : '0.10.0.1',
         slf4j             : '1.7.25', // in line with dropwizard 1.3.3
@@ -106,6 +102,7 @@ ext.libs = [
         jersey_server       : "org.glassfish.jersey.core:jersey-server:$versions.jersey",
         jetty_http          : "org.eclipse.jetty:jetty-http:$versions.jetty",
         junit_jupiter_api   : "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
+        junit_jupiter_engine: "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
         jose4j              : "org.bitbucket.b_c:jose4j:$versions.jose4j",
         jooq                : "org.jooq:jooq:$versions.jooq",
         logback_classic     : "ch.qos.logback:logback-classic:$versions.logback",
@@ -152,6 +149,10 @@ subprojects {
         maven { url "https://dl.bintray.com/stroom/stroom" }
     }
 
+    test {
+        useJUnitPlatform()
+    }
+
     configurations {
 
         // ensure deps don't bring any logging implementations with them as this will
@@ -190,10 +191,6 @@ subprojects {
     }
 
     afterEvaluate {
-        //repositories {
-        //jcenter()
-        //}
-
 //        compileJava {
 //            inputs.property("moduleName", moduleName)
 //            doFirst {
