--- a/stroom-query-api/build.gradle
+++ b/stroom-query-api/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     compile libs.jaxb_api
 
     testCompile libs.assertj_core
-    testCompile libs.junit_jupiter_api
+    testCompileOnly libs.junit_jupiter_api
+
+    testRuntimeOnly libs.junit_jupiter_engine
 }
 
