--- a/stroom-query-audit/build.gradle
+++ b/stroom-query-audit/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     compile libs.slf4j_api
 
     testCompile libs.assertj_core
-    testCompile libs.junit_jupiter_api
+    testCompileOnly libs.junit_jupiter_api
     testCompile libs.mockito_core
+
+    testRuntimeOnly libs.junit_jupiter_engine
 }
