--- a/stroom-query-authorisation/build.gradle
+++ b/stroom-query-authorisation/build.gradle
@@ -33,5 +33,7 @@ dependencies {
     compile libs.slf4j_api
 
     testCompile libs.assertj_core
-    testCompile libs.junit_jupiter_api
+    testCompileOnly libs.junit_jupiter_api
+
+    testRuntimeOnly libs.junit_jupiter_engine
 }
