--- a/stroom-query-jooq/build.gradle
+++ b/stroom-query-jooq/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     compile libs.slf4j_api
 
     testCompile libs.assertj_core
-    testCompile libs.junit_jupiter_api
+    testCompileOnly libs.junit_jupiter_api
+
+    testRuntimeOnly libs.junit_jupiter_engine
 }
