--- a/build.gradle
+++ b/build.gradle
@@ -97,7 +97,8 @@ ext.libs = [
         javax_inject        : "javax.inject:javax.inject:$versions.javax_inject",
         javax_ws            : "javax.ws.rs:javax.ws.rs-api:$versions.javax_ws",
         javax_servlet       : "javax.servlet:javax.servlet-api:$versions.javax_servlet",
-        jaxb_api            : "javax.xml.bind:jaxb-api:2.3.0",
+        jaxb_api            : "javax.xml.bind:jaxb-api:2.3.1",
+        jaxb_runtime        : "org.glassfish.jaxb:jaxb-runtime:2.3.1",
         jersey_client       : "org.glassfish.jersey.core:jersey-client:$versions.jersey",
         jersey_server       : "org.glassfish.jersey.core:jersey-server:$versions.jersey",
         jetty_http          : "org.eclipse.jetty:jetty-http:$versions.jetty",
@@ -159,10 +160,10 @@ subprojects {
         // conflict with logback. Also replace any log4j deps with log4j-over-slf4j
         // so dependency jars work with slf4j
         all {
-            exclude group: "javax.annotation", module: "javax.annotation-api"
+//            exclude group: "javax.annotation", module: "javax.annotation-api"
             exclude group: "org.glassfish.hk2.external", module: "aopalliance-repackaged"
             exclude group: "commons-logging", module: "commons-logging"
-            exclude group: "org.jboss.logging", module: "jboss-logging"
+//            exclude group: "org.jboss.logging", module: "jboss-logging"
             exclude group: "org.jboss.spec.javax.transaction", module: "jboss-transaction-api_1.2_spec"
 //            exclude group: "com.google.guava", module: "guava"
 
