--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ ext.libs = [
         javax_inject        : "javax.inject:javax.inject:$versions.javax_inject",
         javax_ws            : "javax.ws.rs:javax.ws.rs-api:$versions.javax_ws",
         javax_servlet       : "javax.servlet:javax.servlet-api:$versions.javax_servlet",
+        javax_transaction   : "javax.transaction:jta:1.1",
         jaxb_api            : "javax.xml.bind:jaxb-api:2.3.1",
         jaxb_runtime        : "org.glassfish.jaxb:jaxb-runtime:2.3.1",
         jersey_client       : "org.glassfish.jersey.core:jersey-client:$versions.jersey",
