mockito needs a shove to work with java 10

--- a/stroom-query-audit/build.gradle
+++ b/stroom-query-audit/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     testCompile libs.mockito_core
 
     testRuntimeOnly libs.junit_jupiter_engine
+    testRuntimeOnly libs.jaxb_runtime
 }
