--- a/stroom-query-hibernate/build.gradle
+++ b/stroom-query-hibernate/build.gradle
@@ -18,28 +18,29 @@ ext.moduleName = 'stroom.query.hibernate'
 
 dependencies {
     //--------Project----------
-    compile project(':stroom-docref')
-    compile project(':stroom-query-api')
-    compile project(':stroom-query-common')
-    compile project(':stroom-query-audit')
-    compile project(':stroom-query-authorisation')
+    implementation project(':stroom-docref')
+    implementation project(':stroom-query-api')
+    implementation project(':stroom-query-common')
+    implementation project(':stroom-query-audit')
+    implementation project(':stroom-query-authorisation')
 
     // ------- Stroom ---------
-    compile libs.stroomExpression
+    implementation libs.stroomExpression
 
     //--------3rd party--------
-    compile libs.dropwizard_core
-    compile libs.dropwizard_hibernate
-    compile libs.dropwizard_db
-    compile libs.dropwizard_flyway
-    compile libs.flyway_core
-    compile libs.hibernate_core
-    compile libs.hibernate_jpa
-    compile libs.guice
-    compile libs.javax_inject
-    compile libs.slf4j_api
+    implementation libs.dropwizard_core
+    implementation libs.dropwizard_hibernate
+    implementation libs.dropwizard_db
+    implementation libs.dropwizard_flyway
+    implementation libs.flyway_core
+    implementation libs.hibernate_core
+    implementation libs.hibernate_jpa
+    implementation libs.guice
+    implementation libs.javax_inject
+    implementation libs.jaxb_api
+    implementation libs.slf4j_api
 
-    testCompile libs.assertj_core
+    testImplementation libs.assertj_core
     testCompileOnly libs.junit_jupiter_api
 
     testRuntimeOnly libs.junit_jupiter_engine
