--- a/stroom-query-testing/build.gradle
+++ b/stroom-query-testing/build.gradle
@@ -89,6 +89,9 @@ dependencies {
     integrationTestRuntime libs.mariadb_connector
     integrationTestRuntime 'org.apache.derby:derby:10.8.2.2'
 
+    testRuntimeOnly libs.junit_jupiter_engine
+    
     integrationTestRuntimeOnly libs.junit_jupiter_engine
     integrationTestRuntimeOnly libs.jaxb_runtime
+    integrationTestRuntimeOnly libs.javax_transaction
 }
