--- a/stroom-query-testing/build.gradle
+++ b/stroom-query-testing/build.gradle
@@ -16,44 +16,6 @@
 
 ext.moduleName = 'stroom.query.testing'
 
-sourceSets {
-    // This lets us use different directories for our integration tests.
-    integrationTest {
-        java {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
-            srcDir file('src/integration-test/java')
-        }
-        resources.srcDir file('src/integration-test/resources')
-    }
-}
-
-configurations {
-    // This means our integration tests get all the dependencies from our tests and we don't need to specify them twice.
-    integrationTestCompile.extendsFrom testCompile
-    integrationTestRuntime.extendsFrom testRuntime
-}
-
-// This task lets us run the actual integration tests.
-task integrationTest(type: Test) {
-    useJUnitPlatform()
-    
-    testClassesDirs = sourceSets.integrationTest.output.classesDirs
-    classpath = sourceSets.integrationTest.runtimeClasspath
-    testLogging {
-        events "standardOut", "started", "passed", "skipped", "failed"
-    }
-}
-
-// These lines pull the integration test task into our build process.
-check.dependsOn integrationTest
-integrationTest.mustRunAfter test
-
-// This means the reports from our integration tests won't over-write the reports from our unit tests.
-tasks.withType(Test) {
-    reports.html.destination = file("${reporting.baseDir}/${name}")
-}
-
 dependencies {
     //--------Project----------
     compile project(':stroom-docref')
@@ -64,6 +26,8 @@ dependencies {
     //--------3rd party--------
     compile libs.assertj_core
     compile libs.dropwizard_core
+    compile libs.dropwizard_auth
+    compile libs.dropwizard_jersey
     compile libs.guice
     compile libs.google_findbugs
     compile libs.javax_ws;
@@ -78,20 +42,20 @@ dependencies {
 
     compile libs.dropwizard_testing
 
-    integrationTestCompile libs.test_containers
-    integrationTestCompile libs.test_containers_psql
-    integrationTestCompile libs.assertj_core
-    integrationTestCompile libs.dropwizard_flyway
-    integrationTestCompile libs.jackson_annotations
-    integrationTestCompileOnly libs.junit_jupiter_api
-    integrationTestCompile project(':stroom-query-hibernate')
-    integrationTestCompile project(':stroom-query-jooq')
-    integrationTestRuntime libs.mariadb_connector
-    integrationTestRuntime 'org.apache.derby:derby:10.8.2.2'
+    //testCompile libs.test_containers
+    //testCompile libs.test_containers_psql
+    testCompile libs.assertj_core
+    testCompile libs.dropwizard_flyway
+    testCompile libs.jackson_annotations
+    testCompileOnly libs.junit_jupiter_api
+    testCompile project(':stroom-query-hibernate')
+    testCompile project(':stroom-query-jooq')
+    testRuntime libs.mariadb_connector
+    testRuntime 'org.apache.derby:derby:10.8.2.2'
 
     testRuntimeOnly libs.junit_jupiter_engine
     
-    integrationTestRuntimeOnly libs.junit_jupiter_engine
-    integrationTestRuntimeOnly libs.jaxb_runtime
-    integrationTestRuntimeOnly libs.javax_transaction
+    testRuntimeOnly libs.junit_jupiter_engine
+    testRuntimeOnly libs.jaxb_runtime
+    testRuntimeOnly libs.javax_transaction
 }
