--- a/stroom-query-testing/src/test/resources/hibernate_noauth/config.yml
+++ b/stroom-query-testing/src/test/resources/hibernate_noauth/config.yml
@@ -11,10 +11,10 @@ server:
       port: 8900
 
 database:
-  driverClass: org.mariadb.jdbc.Driver
-  user: stroomuser
-  password: stroompassword1
-  url: jdbc:mariadb://localhost:4450/test
+  driverClass: com.mysql.jdbc.Driver
+  user: test
+  password: test
+  url: jdbc:mysql://localhost:4450/test
   properties:
     charSet: UTF-8
     hibernate.dialect: org.hibernate.dialect.MySQLInnoDBDialect
